# insight-notes

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 0001_vec_notes_table.sql
src-tauri/scripts/generate_word_vectors/: Cargo.toml  README.md
src-tauri/scripts/generate_word_vectors/src/: main.rs
src-tauri/src/: main.rs  sentence_encoder.rs  word_vectors.rs
src-tauri/src/commands/: mod.rs  notes.rs  tags.rs
src/app/: globals.css  layout.tsx
src/app/(app)/: layout.tsx  page.tsx
src/app/(app)/notes/: page.tsx
src/app/(app)/notes/[id]/: layout.tsx  page.tsx
src/app/(app)/notes/[id]/_components/: NoteTag.tsx  RelatedNotes.tsx  RelatedWords.tsx
src/app/(settings)/settings/: page.tsx
src/app/_providers/: react-query.tsx
src/components/: NoteCard.tsx  RelatedWord.tsx  Search.tsx
src/components/Sidebar/: NoteTag.tsx  index.tsx
src/components/ui/: command.tsx
src/hooks/: use-related-words.tsx
src/hooks/mutations/notes/: use-note-create.tsx  use-note-delete.tsx  use-note-tag-delete.tsx  use-note-update.tsx
src/hooks/mutations/tags/: use-tag-create.tsx  use-tag-delete.tsx
src/hooks/queries/notes/: use-note.tsx  use-notes-search.tsx  use-notes.tsx  use-related-notes.tsx
src/hooks/queries/tags/: use-tags.tsx
src/lib/: time.ts  utils.ts
src/types/: index.ts
